@@ -9,13 +9,14 @@ Maintainer: Michel Lang <michellang@gmail.com>
 URL: https://github.com/tudo-r/BatchExperiments
 BugReports: https://github.com/tudo-r/BatchExperiments/issues
 License: BSD_3_clause + file LICENSE
-Depends: R (>= 2.15.0), BatchJobs (>= 1.4)
-Imports: checkmate (>= 1.4), BBmisc (>= 1.7), DBI, RSQLite, plyr
+Depends: R (>= 2.15.0), BatchJobs (>= 1.5)
+Imports: checkmate (>= 1.5), BBmisc (>= 1.8), DBI, RSQLite (>= 1.0.0),
+        plyr
 Suggests: randomForest, rpart, testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.3
-Packaged: 2014-09-24 16:25:26 UTC; michel
+Version: 1.4
+Packaged: 2014-10-31 10:05:20 UTC; lang
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-24 18:37:41
+Date/Publication: 2014-10-31 14:46:21
